src/test/deca/context/invalid/resultats/test11_read-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test11_read.ass introuvable
